[package]
name = "nft"
version = "0.0.2"
authors = [ "Alexis Davidson",]
edition = "2018"
publish = false

[lib]
path = "src/nft.rs"

[dependencies.elrond-wasm]
version = "0.34.0"

[dev-dependencies.elrond-wasm-debug]
version = "0.34.0"

[dependencies.multiversx-sc]
version = "0.39.5"
path = "../base"